refactor command class